[gd_scene load_steps=7 format=3 uid="uid://b32jloqpeu7sn"]

[ext_resource type="Script" path="res://Towers/Mine.gd" id="1_qpnq2"]
[ext_resource type="Texture2D" uid="uid://d4el6x46a8jk" path="res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Barrel/Red/Barrel_Red.png" id="2_xgtii"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_53dkh"]
size = Vector2(121, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sa3m"]
atlas = ExtResource("2_xgtii")
region = Rect2(256, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_utxvm"]
atlas = ExtResource("2_xgtii")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_e3vq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sa3m")
}],
"loop": true,
"name": &"Armed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utxvm")
}],
"loop": true,
"name": &"Unarmed",
"speed": 5.0
}]

[node name="Mine" type="Area2D"]
light_mask = 8
visibility_layer = 8
script = ExtResource("1_qpnq2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_53dkh")

[node name="Animation" type="AnimatedSprite2D" parent="."]
position = Vector2(9.53674e-07, 4)
scale = Vector2(0.828125, 0.65625)
sprite_frames = SubResource("SpriteFrames_e3vq5")
animation = &"Armed"

[node name="ExplosionOrigin" type="Node2D" parent="Animation"]

[node name="ArmingTimer" type="Timer" parent="."]
wait_time = 14.0
one_shot = true
autostart = true

[node name="Explosion" type="Node2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="ArmingTimer" to="." method="_on_arming_timer_timeout"]
